--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h2>hello</h2>
     <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti nulla totam necessitatibus recusandae fugiat, quia quos tenetur quis laboriosam mollitia consequatur deserunt, distinctio id quasi veritatis repudiandae aliquid veniam tempora.</P>
 </body>
+<script src="./script.js"></script>
 
 </html>
